Changelog
=========


1.2.2 (unreleased)
------------------

- Nothing changed yet.


1.2.1 (2013-05-24)
------------------

- Reduce empty space in dropzone portlet listing.
  [jone]


1.2 (2013-04-09)
----------------

- Implement an editable css klass.
  [mathias.leimgruber]

- Code cleanup (remove whitespaces).
  [mathias.leimgruber]

- Implement emptymarker css klass.
  [mathias.leimgruber]

- CSS: remove overflow hidden.
  [mathias.leimgruber]

- Move package to github.
  [jone]


1.1 (2010-06-09)
----------------

- make simplelayout.base > 2.0rc5 compatible
  [mathias.leimgruber]