@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object>
+    <order manager="simplelayout.portlet.listing" skinname="*">
+     <viewlet name="simplelayout.base.listingPortlet.body" />
+    </order>
+</object>
